2003-04-12  Rob Browning  <rlb@defaultvalue.org>

	* backtrace.c (display_backtrace_file): correct a couple of
	instances of "file == SCM_BOOL_F" to "SCM_FALSEP (file)"
	(shouldn't be comparing values directly).

	* __scm.h (SCM_FLUSH_REGISTER_WINDOWS): don't just rely on "sparc"
	test.  Instead use
	#if defined (sparc) || defined (__sparc__) || defined (__sparc)
	as gc_os_dep.c suggests is appropriate.

2003-04-11  Rob Browning  <rlb@defaultvalue.org>

	* goops.c (prep_hashsets): make static to match prototype.
	(scm_sym_args): SCM_SYMBOL -> SCM_GLOBAL_SYMBOL.  Thanks to Albert
	Chin.

	* c-tokenize.lex: remove trailing comma from enum.  Thanks to
	Albert Chin.

	* gc_os_dep.c: add NetBSD powerpc config info.  Thanks to Thomas
	Klausner.

	* eval.c (SCM_CEVAL): fixed a couple of mysterious (probably
	optimization related) bugs on powerpc by altering some
          "while (!SCM_NULLP (t.arg1 = SCM_CDR (t.arg1)))"
        or
          "if (...foo = bar...)"
	style constructs to move the assignments outside the guards.
	(scm_m_case): move some assignments outside guards as above.
	(scm_m_letrec1): move some assignments outside guards as above.
	(unmemocopy): move some assignments outside guards as above.
	(scm_eval_body): move some assignments outside guards as above.
	(SCM_APPLY): move some assignments outside guards as above.
	(s_scm_copy_tree): move some assignments outside guards as above.

	* throw.c (scm_ithrow): removed winds "asm" protection in favor of
	scm_remember_upto_here_1.

2003-03-19  Marius Vollmer  <mvo@zagadka.de>

	* gc_os_dep.c: Added defines for sparc-unknown-netbsdelf1.5 from
	Adrian Bunk.  Thanks!

2003-02-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* hooks.c (scm_c_hook_add): Fixed bug in append mode.

2003-02-05  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* debug.c (scm_procedure_source): Handle all objects for which
	procedure? is #t.  (Thanks to Bill Schottstaedt.)

2003-02-01  Rob Browning  <rlb@defaultvalue.org>
