@@ -80,4 +80,5 @@ For fixes or providing information which led to a fix:
      Panagiotis Vossos
 	 Thomas Wawrzinek
 	Florian Weimer
+           Andy Wingo
 	  Keith Wright
